AB#182946: see more button alignment and hover state fixes

--- a/docroot/themes/custom/emulsifymars/components/01-atoms/links/defaultLink/_defaultLink.scss
+++ b/docroot/themes/custom/emulsifymars/components/01-atoms/links/defaultLink/_defaultLink.scss
@@ -30,7 +30,7 @@
     }
 
     @include medium {
-      width: 350px;
+      width: 750px;
     }
   }
 
