--- a/docroot/themes/custom/emulsifymars/components/03-organisms/grid/_ajax-card-grid.scss
+++ b/docroot/themes/custom/emulsifymars/components/03-organisms/grid/_ajax-card-grid.scss
@@ -10,6 +10,9 @@
   }
 
   &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     z-index: 2;
     background-color: clr(subcolor-2);
